@@ -1,1 +1,2 @@
 # Simple disk usage visualiser
+--module-path "ВАШ ПУТЬ ДО БИБЛИОТЕК JAVAFX" --add-modules javafx.controls,javafx.fxml
